--- a/css/vote.css
+++ b/css/vote.css
@@ -91,3 +91,25 @@
     background: linear-gradient(180deg, rgba(32, 17, 3, 0) 41.97%, #201103 83.34%);
 
 }
+.floating-plus {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: white;
+    opacity: 1;
+    animation: floatUp 1s ease-out forwards;
+}
+
+@keyframes floatUp {
+    0% {
+        transform: translate(-50%, -50%);
+        opacity: 1;
+    }
+    100% {
+        transform: translate(-50%, -100px);
+        opacity: 0;
+    }
+}
