--- a/css/home.css
+++ b/css/home.css
@@ -12,3 +12,7 @@ box-shadow: 0px 15.04px 20.06px 0px #583BDC inset,
     background: radial-gradient(50% 50% at 50% 50%, #392008 0%, #201103 100%);
 
 }
+
+.mirror-left {
+    transform: scale(1, -1) rotate(180deg);
+}
